project (examples)

set (EXECUTABLE_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/bin)

message ("############################################################")
message ("# Examples                                                 #")
message ("CMAKE_HOME_DIRECTORY => ${CMAKE_HOME_DIRECTORY}")
message ("CMAKE_INCLUDE_DIR =>    ${CMAKE_INCLUDE_DIR}")
message ("CMAKE_SOURCE_DIR =>     ${CMAKE_SOURCE_DIR}")
message ("CMAKE_BINARY_DIR =>     ${CMAKE_BINARY_DIR}")
message ("EXE_OUTPUT_PATH =>      ${EXECUTABLE_OUTPUT_PATH}")

include_directories (${CMAKE_SOURCE_DIR}/libs)
include_directories (${CMAKE_SOURCE_DIR}/libs/inc)

add_executable (events Events.cpp)
target_link_libraries(events event timer)

add_executable (fifoClient FifoClient.cpp)
target_link_libraries(fifoClient gposix)
add_executable (fifoServer FifoServer.cpp)
target_link_libraries(fifoServer gposix)
add_executable (eg_inotify Inotify.cpp)
target_link_libraries(eg_inotify gposix)

add_executable (msgReceiver MessageReceiver.cpp)
target_link_libraries(msgReceiver gposix)
add_executable (msgReceiverEvent MessageReceiverEvent.cpp)
target_link_libraries(msgReceiverEvent gposix)
add_executable (msgSender MessageSender.cpp)
target_link_libraries(msgSender gposix)

add_executable (sockDgramClient SockDgramClient.cpp)
target_link_libraries(sockDgramClient gposix)
add_executable (sockDgramServer SockDgramServer.cpp)
target_link_libraries(sockDgramServer gposix)
add_executable (sockStreamClient SockStreamClient.cpp)
target_link_libraries(sockStreamClient gposix)
add_executable (sockStreamServer SockStreamServer.cpp)
target_link_libraries(sockStreamServer gposix)
