#------------------------------------------------------------
# libSockDgram
#------------------------------------------------------------
message ("-")
ADD_SUBDIRECTORY(libSockDgram)

#------------------------------------------------------------
# libSockStream
#------------------------------------------------------------
message ("-")
ADD_SUBDIRECTORY(libSockStream)

#------------------------------------------------------------
# libSudp
#------------------------------------------------------------
message ("-")
ADD_SUBDIRECTORY(libSudp)

#------------------------------------------------------------
# libEvents
#------------------------------------------------------------
message ("-")
ADD_SUBDIRECTORY(libEvents)
